...
              style={({ pressed }) => [
                styles.signOutButton,
                pressed && styles.pressedBtn,
              ]}
              onPress={signOut}
            >
              <Text style={styles.signOutText}>Sign out</Text>
            </Pressable>
          </View>
        </View>
      }
      ListEmptyComponent={<Text>No posts yet</Text>}
      contentContainerStyle={styles.content}
    />
  );
}

const styles = StyleSheet.create({
...
